--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(mb.do)
 export(mb.prep)
 export(presc.do)
 export(presc.p)
+export(presc.plot)
 export(presc.single)
 export(presc.v)
 export(sw.do)
