Add structure plotting
* DESCRIPTION: New imports.
  [curl]

* R/mix.R(rendersmiles2,renderurl): New functions.
  Various function that are a rip-off of Emma's RChemMass and deal
  with the plotting of structures using an online resource.

* man: Update docs.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,10 +19,12 @@ Roxygen: list(markdown = TRUE)
 Collate:
     'mix.R'
     'run.R'
-Imports: 
+Depends:
     RMassBank,
+    RChemMass
+Imports: 
     parallel,
     yaml,
     mzR,
     RColorBrewer,
-    RChemMass
+    curl
