--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,30 @@
 Package: shinyscreen
 Title: Pre-screening of Mass Spectrometry Data 
-Version: 0.1
+Version: 0.3
 Author: Todor Kondić
 Maintainer: Todor Kondić <todor.kondic@uni.lu>
 Authors@R: 
-    person(given = "Todor",
-           family = "Kondić",
-           role = c("aut", "cre"),
-           email = "todor.kondic@uni.lu",
-           comment = c(ORCID = "https://orcid.org/0000-0001-6662-4375"))
+    c(person(given = "Todor",
+             family = "Kondić",
+             role = c("aut", "cre"),
+             email = "todor.kondic@uni.lu",
+             comment = c(ORCID = "https://orcid.org/0000-0001-6662-4375")),
+      person(given = "Hiba Mohammed",
+             family = "Taha",
+             role = c("ctb"),
+             email = "hiba.mohammed-taha@ext.uni.lu"),
+      person(given = "Jessy",
+             family = "Krier",
+             role = c("ctb"),
+             email = "jessy.krier@ext.uni.lu"),
+      person(given = "Mira",
+             family = "Narayanan",
+             role = c("ctb"),
+             email = "mira.narayanan@ext.uni.lu"),
+      person(given = "Anjana",
+             family = "Elapavalore",
+             role = c("ctb"),
+             email = "anjana.elapavalore@ext.uni.lu"))	     
 Description: Pre-screening of Mass Spectrometry Data.
 License: Apache License (>= 2.0)
 Encoding: UTF-8
