Rudimentary ggplot2 with multiplot works

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -47,7 +47,9 @@ Imports:
     yaml,
     mzR,
     MSnbase,
+    ggplot2,
     RColorBrewer,
+    grid,
     curl,
     shiny,
     shinydashboard,
