R/shinyUI.R, R/shiny-ui-base.R, R/shiny-ui-top.R: Restructuring GUI
* R/shinyUI.R: Removed.
  A monolithic file that became difficult to maintain.

* R/shiny-ui-top.R: New file. Contains top-level server and interface
  functions.

(mk_ui): New function. Replace old mkUI and serve as a top-level user
interface definition function.

(mk_shinyscreen): Removed most of it. Only the top-level content
remains.

* DESCRIPTION: Updated.

* R/shiny-ui-base.R: New file. Shiny wrappers.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -50,7 +50,8 @@ Collate:
     'extraction.R'
     'run.R'
     'api.R'
-    'shinyUI.R'
+    'shiny-ui-base.R'
+    'shiny-ui-top.R'
 Depends:
     RMassBank,
     RChemMass
