Fix importFrom directive
* R/shiny-ui-base.R, NAMESPACE:
  importFrom(shiny,validate) now correct.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,4 +10,4 @@ export(run)
 export(run_in_dir)
 export(vrfy_conf)
 import(data.table)
-importFrom("(shiny,","validate)")
+importFrom(shiny,validate)
