--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 export(gen)
 export(launch)
+export(load_compound_input)
+export(load_data_input)
 export(load_inputs)
 export(mk_comp_tab)
 export(read_conf)
