--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ export(load_compound_input)
 export(load_data_input)
 export(load_inputs)
 export(mk_comp_tab)
-export(read_conf)
+export(new_state)
 export(run)
 export(run_in_dir)
 import(data.table)
