--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: shinyscreen
 Title: Pre-screening of Mass Spectrometry Data 
-Version: 0.8
+Version: 0.8.1
 Author: Todor Kondić
 Maintainer: Todor Kondić <todor.kondic@uni.lu>
 Authors@R: 
@@ -24,7 +24,14 @@ Authors@R:
       person(given = "Anjana",
              family = "Elapavalore",
              role = c("ctb"),
-             email = "anjana.elapavalore@ext.uni.lu"))	     
+             email = "anjana.elapavalore@ext.uni.lu"),
+      person(given = "Adelene",
+             family = "Lai",
+	     email = "adelene.lai@uni.lu",
+	     role = c("ctb")),
+      person(given = "Emma",
+             family = "Schymanski",
+	     role = c("ctb")))
 Description: Pre-screening of Mass Spectrometry Data.
 License: Apache License (>= 2.0)
 Encoding: UTF-8
