Update docs and NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,5 +14,6 @@ export(prescreen)
 export(run)
 export(run_in_dir)
 export(sort_spectra)
+export(subset_summary)
 import(data.table)
 importFrom(shiny,validate)
