all: Minimal plot and publish system in place
* NAMESPACE: Update exports

* R/api.R(create_plots,save_plots,report): User-level functions to
generate and save plots, as well as generate a report containing them.

* R/mix.R: Supporting functions for above.

* R/resources.R: Supporting params for above.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(concurrency)
 export(conf_trans)
+export(create_plots)
 export(extr_data)
 export(extract)
 export(launch)
@@ -11,8 +12,10 @@ export(load_inputs)
 export(mk_comp_tab)
 export(mk_tol_funcs)
 export(prescreen)
+export(report)
 export(run)
 export(run_in_dir)
+export(save_plots)
 export(sort_spectra)
 export(subset_summary)
 import(data.table)
