all: Reorganise state init to fit with RMD workflow

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,11 +11,17 @@ export(load_data_input)
 export(load_inputs)
 export(mk_comp_tab)
 export(mk_tol_funcs)
+export(mz_input)
+export(new_rv_state)
+export(new_state)
+export(new_state_fn_conf)
 export(prescreen)
 export(report)
+export(rt_input)
 export(run)
 export(run_in_dir)
 export(save_plots)
+export(setup_phase)
 export(sort_spectra)
 export(subset_summary)
 import(data.table)
