--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(create_plots)
 export(extr_data)
 export(extract)
 export(launch)
+export(list2rev)
 export(load_compound_input)
 export(load_data_input)
 export(load_inputs)
@@ -17,6 +18,7 @@ export(new_state)
 export(new_state_fn_conf)
 export(prescreen)
 export(report)
+export(rev2list)
 export(rt_input)
 export(run)
 export(run_in_dir)
