Update NAMESPACE and fix write_conf

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,9 @@ export(create_plots)
 export(extr_data)
 export(extract)
 export(get_fn_comp)
+export(get_fn_conf)
 export(get_fn_extr)
+export(get_fn_ftab)
 export(get_fn_summ)
 export(launch)
 export(list2rev)
