app: Enable restoring the state

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(list2rev)
 export(load_compound_input)
 export(load_data_input)
 export(load_inputs)
+export(merge2rev)
 export(mk_comp_tab)
 export(mk_tol_funcs)
 export(mz_input)
