api,mix: Fix reading in RT limits

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(get_fn_conf)
 export(get_fn_extr)
 export(get_fn_ftab)
 export(get_fn_summ)
+export(grab_unit)
 export(launch)
 export(list2rev)
 export(load_compound_input)
