mix,resources,app: Drop config save/restore; replace with state

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,5 +34,6 @@ export(save_plots)
 export(setup_phase)
 export(sort_spectra)
 export(subset_summary)
+export(tk_save_file)
 import(data.table)
 importFrom(shiny,validate)
