Squashed commit of the following:
commit ad789545c8fab046edc9f97c36c796006d576bf8
Author: Todor Kondić <todor.kondic@uni.lu>
Date:   Thu Dec 10 13:21:13 2020 +0100

    all: Version 0.9.3

    We have redesigned the way the plotting works and how the data
    exploration is situated within the application's interactive document.

    Previously, plots have been generated and stored as tables in the
    m$out$tab sublist of the state object (m). This, however, made it a
    bit more difficult to manipulate plot details which differ between how
    the plots are supposed to be displayed as a part of the application
    and how they look like as individual figures.

    The new approach is to have functions that generate single plots based
    on plot index (see m$conf$figures$grouping) instead of pregenerating
    collections of plots. The same functions are used in parts of the code
    that display this interactively to a user (app.Rmd, the data explorer)
    and those that save figures. The program knows when to apply
    modifications which will make the output suitable to the format of
    display.

    The plot selection table, as well as the plots themselves are now
    hidden in the Data Explorer tab. The plot parameters have been moved
    from the beginning of the document to a side panel. The plots are
    displayed within a well panel next to the side panel.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: shinyscreen
 Title: Pre-screening of Mass Spectrometry Data 
-Version: 0.9.2
+Version: 0.9.3
 Author: Todor Kondić
 Maintainer: Todor Kondić <todor.kondic@uni.lu>
 Authors@R: 
@@ -20,19 +20,19 @@ Authors@R:
       person(given = "Hiba Mohammed",
              family = "Taha",
              role = c("ctb"),
-             email = "hiba.mohammed-taha@ext.uni.lu"),
+             email = "hiba.mohammed-taha@uni.lu"),
       person(given = "Jessy",
              family = "Krier",
              role = c("ctb"),
-             email = "jessy.krier@ext.uni.lu"),
+             email = "jessy.krier@uni.lu"),
       person(given = "Mira",
              family = "Narayanan",
              role = c("ctb"),
-             email = "mira.narayanan@ext.uni.lu"),
+             email = "mira.narayanan@uni.lu"),
       person(given = "Anjana",
              family = "Elapavalore",
              role = c("ctb"),
-             email = "anjana.elapavalore@ext.uni.lu"),
+             email = "anjana.elapavalore@uni.lu"),
       person(given = "Marc",
              family = "Warmoes",
 	     role = c("ctb"),
@@ -69,8 +69,6 @@ Imports:
     grid,
     curl,
     shiny,
-    shinydashboard,
-    shinyFiles,
     rhandsontable,
     DT,
     tcltk
