--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(conf_trans)
 export(create_plots)
 export(extr_data)
 export(extract)
+export(gen_key_plot_tab)
+export(gen_struct_plots)
 export(get_fn_comp)
 export(get_fn_conf)
 export(get_fn_extr)
@@ -23,6 +25,11 @@ export(mz_input)
 export(new_rv_state)
 export(new_state)
 export(new_state_fn_conf)
+export(plot_ms1_chr)
+export(plot_ms2_chr)
+export(plot_ms2_spec)
+export(plot_struct)
+export(plot_struct_nowrap)
 export(prescreen)
 export(report)
 export(rev2list)
