app: Enable setting RT range

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,9 @@ export(get_fn_conf)
 export(get_fn_extr)
 export(get_fn_ftab)
 export(get_fn_summ)
+export(get_ms1_chr_pdata)
+export(get_ms2_chr_pdata)
+export(get_rt_interval)
 export(grab_unit)
 export(list2rev)
 export(load_compound_input)
@@ -31,6 +34,7 @@ export(plot_ms2_spec)
 export(plot_struct)
 export(plot_struct_nowrap)
 export(prescreen)
+export(read_rt)
 export(report)
 export(rev2list)
 export(rt_input)
