shiny-ui-base,app,www: Add dropdown capability to datafiles
* shiny-ui-base (celledit_values, dt_drop_callback, editcell_script,
dropdown_dt): New functions.

(simple_style_dt): Updated.

(rf_get_inp_datafiles): Removed.

(datatab-edit): New observer.

<other observers>: Modified so they work with rv_dfiles, rv_datafiles
and dropdowns.

<renderDT>: Output renders updated.

www: cellEdit javascript and css

app: Updated controls.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(app)
 export(concurrency)
 export(conf_trans)
 export(create_plots)
+export(editcell_script)
 export(extr_data)
 export(extract)
 export(gen_struct_plots)
