api,base,shiny-ui-base: Fix #86
Values and units have not been read in the GUI template correctly. Now
fixed.

* app<numeric/unit inputs>: Updated. Read in values/units properly.

* base(get_val_unit): New exported function.

* shiny-ui-base<everything related to order_summ table>: Commented
out. Too unstable for now.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(get_fn_extr)
 export(get_fn_ftab)
 export(get_fn_summ)
 export(get_rt_interval)
+export(get_val_unit)
 export(grab_unit)
 export(list2rev)
 export(load_compound_input)
