api,plotting,resources: Make report work again
* api.R(report): Updated.

* plotting.R(plot_fname_prefix,plot_save_single): Updated.

* resources.R(REP_TOPDIR): New constant.

* inst/rmd/report_chunk.rmd: New template.

* inst/rmd/report_header.rmd: New template.

* man: Update docs.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(plot_struct_nowrap)
 export(prescreen)
 export(read_rt)
 export(report)
+export(report_old)
 export(rev2list)
 export(rt_input)
 export(run)
