--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: shinyscreen
 Title: Pre-screening of Mass Spectrometry Data 
-Version: 1.0.7
+Version: 1.0.8
 Author: Todor Kondić
 Maintainer: Todor Kondić <todor.kondic@uni.lu>
 Authors@R: 
@@ -64,6 +64,7 @@ Imports:
     data.table,
     assertthat,
     withr,
+    rmarkdown,
     htmltools,
     ggplot2,
     cowplot,
