--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(rev2list)
 export(rt_input)
 export(run)
 export(run_in_dir)
+export(serve)
 export(setup_phase)
 export(sort_spectra)
 export(subset_summary)
