extraction: Add new importFrom

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,4 +42,6 @@ export(sort_spectra)
 export(subset_summary)
 export(tk_save_file)
 import(data.table)
+importFrom(MSnbase,filterMz)
+importFrom(MSnbase,readMSData)
 importFrom(shiny,validate)
