api, mix, shiny-ui-base: Introduce the concept of "project" and "data"directories for script-based workflow.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,15 +23,14 @@ export(merge2rev)
 export(mk_comp_tab)
 export(mk_tol_funcs)
 export(mz_input)
+export(new_project)
 export(new_rv_state)
 export(new_state)
-export(new_state_fn_conf)
 export(plot_struct)
 export(plot_struct_nowrap)
 export(prescreen)
 export(read_rt)
 export(report)
-export(report_old)
 export(rev2list)
 export(rt_input)
 export(run)
