web interface: Adapted to project/data input organisation.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(merge2rev)
 export(mk_comp_tab)
 export(mk_tol_funcs)
 export(mz_input)
+export(new_empty_project)
 export(new_project)
 export(new_rv_state)
 export(new_state)
