--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,11 @@ export(setup_phase)
 export(sort_spectra)
 export(subset_summary)
 export(tk_save_file)
+export(which_gui_inputs)
+export(which_gui_numeric_inputs)
+export(which_gui_radio_inputs)
+export(which_gui_select_inputs)
+export(which_gui_text_inputs)
 import(data.table)
 importFrom(MSnbase,filterMz)
 importFrom(MSnbase,readMSData)
