--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(mk_tol_funcs)
 export(mz_input)
 export(new_empty_project)
 export(new_project)
+export(new_runtime_state)
 export(new_rv_state)
 export(new_state)
 export(plot_struct)
