--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(get_fn_summ)
 export(get_rt_interval)
 export(get_val_unit)
 export(grab_unit)
+export(import_project)
 export(list2rev)
 export(load_compound_input)
 export(load_data_input)
@@ -32,6 +33,7 @@ export(plot_struct)
 export(plot_struct_nowrap)
 export(prescreen)
 export(read_rt)
+export(refresh_state)
 export(report)
 export(rev2list)
 export(rt_input)
