app: Shinyscreen becomes asynchronous.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(app)
 export(concurrency)
 export(conf_trans)
 export(create_plots)
+export(create_stub_gui)
 export(extr_data)
 export(extract)
 export(gen_struct_plots)
@@ -29,9 +30,11 @@ export(new_project)
 export(new_runtime_state)
 export(new_rv_state)
 export(new_state)
+export(pack_app_state)
 export(plot_struct)
 export(plot_struct_nowrap)
 export(prescreen)
+export(r2datatab)
 export(read_rt)
 export(refresh_state)
 export(report)
@@ -44,12 +47,9 @@ export(setup_phase)
 export(sort_spectra)
 export(subset_summary)
 export(tk_save_file)
-export(which_gui_inputs)
-export(which_gui_numeric_inputs)
-export(which_gui_radio_inputs)
-export(which_gui_select_inputs)
-export(which_gui_text_inputs)
 import(data.table)
 importFrom(MSnbase,filterMz)
 importFrom(MSnbase,readMSData)
+importFrom(promises,"%...>%")
+importFrom(promises,future_promise)
 importFrom(shiny,validate)
