--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,3 +52,4 @@ importFrom(MSnbase,readMSData)
 importFrom(promises,"%...>%")
 importFrom(promises,future_promise)
 importFrom(shiny,validate)
+importFrom(ggplot2,aes)
