--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 image: rocker/rstudio
 test:
    script:
+    - apt install xdg-utils automake autoconf gcc make openjdk-11-jre-headless
     - R -e 'install.packages(c("devtools", "testthat","BiocManager","installr","promises","assertthat","data.table","withr","yaml","rmarkdown","htmltools","ggplot2","cowplot","RColorBrewer","shiny","DT","future"))'
     - R -e 'library(installr);install.Rtools()'
     - R -e 'install.packages(c("curl","rsvg","enviPat","rJava", "fingerprint", "png", "rcdk", "rcdklibs"), dependencies=TRUE)'
