.gitlab-ci.yml: Update.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,8 @@
 image: rocker/rstudio
 test:
    script:
-    - apt install xdg-utils automake autoconf gcc make openjdk-11-jre-headless
+    - apt-get update
+    - apt install --yes --no-install-recommends xdg-utils automake autoconf gcc make
     - R -e 'install.packages(c("devtools", "testthat","BiocManager","installr","promises","assertthat","data.table","withr","yaml","rmarkdown","htmltools","ggplot2","cowplot","RColorBrewer","shiny","DT","future"))'
     - R -e 'library(installr);install.Rtools()'
     - R -e 'install.packages(c("curl","rsvg","enviPat","rJava", "fingerprint", "png", "rcdk", "rcdklibs"), dependencies=TRUE)'
