--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,15 +2,15 @@ image: rocker/rstudio
 test:
    script:
     - apt-get update
-    - apt install --yes --no-install-recommends xdg-utils automake autoconf gcc make
+    - apt install --yes --no-install-recommends xdg-utils automake autoconf gcc make net-tools git
     - R -e 'install.packages(c("devtools", "testthat","BiocManager","installr","promises","assertthat","data.table","withr","yaml","rmarkdown","htmltools","ggplot2","cowplot","RColorBrewer","shiny","DT","future"))'
     - R -e 'library(installr);install.Rtools()'
     - R -e 'install.packages(c("curl","rsvg","enviPat","rJava", "fingerprint", "png", "rcdk", "rcdklibs"), dependencies=TRUE)'
     - R -e 'BiocManager::install(c("MSnbase", "mzR", "RMassBank"))'
-    - R -e 'devtools::install_github("CDK-R/rinchi")'
-    - R -e 'devtools::install_github("CDK-R/cdkr", subdir="rcdklibs")'
-    - R -e 'devtools::install_github("CDK-R/cdkr", subdir="rcdk")'
-    - R -e 'devtools::install_github("schymane/RChemMass", dependencies=FALSE)'
+    - R -e 'devtools::install_git("https://github.com/CDK-R/cdkr/rinchi")'
+    - R -e 'devtools::install_git("https://github.com/CDK-R/cdkr", subdir="rcdklibs")'
+    - R -e 'devtools::install_git("https://github.com/CDK-R/cdkr", subdir="rcdk")'
+    - R -e 'devtools::install_git("schymane/RChemMass", dependencies=FALSE)'
     - R CMD build . --no-build-vignettes --no-manual
     - PKG_FILE_NAME=$(ls -1t *.tar.gz | head -n 1)
     - R CMD check "${PKG_FILE_NAME}" --no-build-vignettes --no-manual
