--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,9 +8,9 @@ test:
     - R -e 'install.packages(c("curl","rsvg","enviPat","rJava", "fingerprint", "png", "rcdk", "rcdklibs"), dependencies=TRUE)'
     - R -e 'BiocManager::install(c("MSnbase", "mzR", "RMassBank"))'
     - R -e 'devtools::install_git("https://github.com/CDK-R/rinchi")'
-    - R -e 'devtools::install_git("https://github.com/CDK-R/cdkr", subdir="rcdklibs")'
-    - R -e 'devtools::install_git("https://github.com/CDK-R/cdkr", subdir="rcdk")'
-    - R -e 'devtools::install_git("schymane/RChemMass", dependencies=FALSE)'
+    - R -e 'devtools::install_git("https://github.com/CDK-R/cdkr", subdir="rcdklibs", dependencies=F)'
+    - R -e 'devtools::install_git("https://github.com/CDK-R/cdkr", subdir="rcdk", dependencies=F)'
+    - R -e 'devtools::install_git("https://github.com/schymane/RChemMass.git", dependencies=F)'
     - R CMD build . --no-build-vignettes --no-manual
     - PKG_FILE_NAME=$(ls -1t *.tar.gz | head -n 1)
     - R CMD check "${PKG_FILE_NAME}" --no-build-vignettes --no-manual
