--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ test:
     - R -e 'install.packages(c("curl","rsvg","enviPat","rJava", "fingerprint", "png", "rcdk", "rcdklibs"), dependencies=TRUE)'
     - R -e 'BiocManager::install(c("MSnbase", "mzR", "RMassBank"))'
     - R -e 'devtools::install_git("https://github.com/CDK-R/rinchi")'
-    - R -e 'devtools::install_git("https://github.com/CDK-R/cdkr", subdir="rcdklibs", dependencies=F)'
+    - R -e 'devtools::install_git("https://github.com/CDK-R/rcdklibs", dependencies=F)'
     - R -e 'devtools::install_git("https://github.com/CDK-R/cdkr", subdir="rcdk", dependencies=F)'
     - R -e 'devtools::install_git("https://github.com/schymane/RChemMass", dependencies=F)'
     - R CMD build . --no-build-vignettes --no-manual
