--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,11 +2,13 @@ image: rocker/rstudio
 test:
    script:
     - apt-get update
-    - apt install --yes --no-install-recommends xdg-utils automake autoconf gcc make net-tools git git-all
+    - apt install --yes --no-install-recommends xdg-utils automake autoconf gcc make net-tools git git-all default-jre-headless
     - R -e 'install.packages(c("devtools", "testthat","BiocManager","installr","promises","assertthat","data.table","withr","yaml","rmarkdown","htmltools","ggplot2","cowplot","RColorBrewer","shiny","DT","future"))'
     - R -e 'library(installr);install.Rtools()'
     - R -e 'install.packages(c("curl","rsvg","enviPat","rJava", "fingerprint", "png", "rcdk", "rcdklibs"), dependencies=TRUE)'
-    - R -e 'BiocManager::install(c("MSnbase", "mzR", "RMassBank"))'
+    - R -e 'BiocManager::install("mzR")'
+    - R -e 'BiocManager::install("MSnbase")'
+    - R -e 'BiocManager::install(c("RMassBank"))'
     - R -e 'devtools::install_git("https://github.com/CDK-R/rinchi")'
     - R -e 'devtools::install_git("https://github.com/CDK-R/rcdklibs", dependencies=F)'
     - R -e 'devtools::install_git("https://github.com/CDK-R/cdkr", subdir="rcdk", dependencies=F)'
