--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -46,6 +46,7 @@ Roxygen: list(markdown = TRUE)
 Collate:
     'base.R'
     'resources.R'
+    'errors.R'
     'mix.R'
     'state.R'
     'plotting.R'
