app, tests, shiny-*: Add MetFrag panel logic.
* envopts (envopts): Update. Normalise MetFrag paths.

* resources (METFRAG_DATABASE_TYPE, METFRAG_REMOTE_DATABASE_TYPE,
METFRAG_LOCAL_DATABASE_TYPE): Updated. Rearranged for finer control.

* shiny-state (make_metfrag_panel): New function.

* shiny-ui-base (mf-database-type): New observer.
(cando_metfrag, metfrag_panel): New outputs.

* app (MetFrag): Update section header. Delete hardwired controls.
(metfrag_panel): New control which replaced the hardwired controls.

tests: Update with new functionality.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,4 +50,8 @@ importFrom(MSnbase,filterMz)
 importFrom(MSnbase,readMSData)
 importFrom(promises,"%...>%")
 importFrom(promises,future_promise)
+importFrom(shiny,HTML)
+importFrom(shiny,numericInput)
+importFrom(shiny,selectInput)
+importFrom(shiny,textInput)
 importFrom(shiny,validate)
