--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: shinyscreen
 Title: Pre-screening of Mass Spectrometry Data 
-Version: 1.2.9001
+Version: 1.2.9002
 Author: Todor Kondić
 Maintainer: Todor Kondić <todor.kondic@uni.lu>
 Authors@R: 
@@ -76,6 +76,7 @@ Imports:
     grid,
     curl,
     shiny,
+    processx,
     promises,
     DT
 Suggests: 
