--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,21 @@
 image: kontrapunkt/eci
 test:
-   script:
+  stage: test
+  variables:
+    METFRAG_JAR: "/usr/local/bin/MetFragCommandLine-2.5.0.jar"
+  script:
     - R CMD build . --no-build-vignettes --no-manual
     - PKG_FILE_NAME=$(ls -1t *.tar.gz | head -n 1)
     - R CMD check "${PKG_FILE_NAME}" --no-build-vignettes --no-manual
     - R -e 'devtools::test()'
+
+
+build:
+  stage: build
+  only:
+    - master
+    - devel
+  script:
+    - echo "Hello $CI_REGISTRY_IMAGE:$CI_COMMIT_TAG"
+
+    
