--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(get_rt_interval)
 export(get_val_unit)
 export(grab_unit)
 export(import_project)
+export(init)
 export(list2rev)
 export(load_compound_input)
 export(load_data_input)
