--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,5 +66,5 @@ release-image:
     - docker pull $CONTAINER_TEST_IMAGE
     - docker tag $CONTAINER_TEST_IMAGE $CONTAINER_RELEASE_IMAGE
     - docker push $CONTAINER_RELEASE_IMAGE
-#  only:
-#    - master    
+ only:
+   - master    
