--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,7 +67,4 @@ release-image:
     - docker tag $CONTAINER_TEST_IMAGE $CONTAINER_RELEASE_IMAGE
     - docker push $CONTAINER_RELEASE_IMAGE
   rules:
-    - if: $CI_COMMIT_BRANCH == "master"
-    - if: $CI_COMMIT_TAG == ""
-      when: never
-
+    - if: $CI_COMMIT_BRANCH == "master" && $CI_COMMIT_TAG
