--- a/docker/ssuser/Dockerfile
+++ b/docker/ssuser/Dockerfile
@@ -1,4 +1,4 @@
-FROM gitlab.lcsb.uni.lu:4567/eci/shinyscreen:base
+FROM gitlab.lcsb.uni.lu:4567/eci/shinyscreen/dep/base:latest
 MAINTAINER todor.kondic@uni.lu
 RUN useradd -ms /bin/bash ssuser
 USER ssuser
